# knowledge-onboarding-agent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/context/: CONTEXT.md  implementation-tracker.md  session-log.md
.github/prompts/: adr-creation.prompt.md  architecture-discussion.prompt.md  context-summary.prompt.md  implementation-task.prompt.md
config/: settings.yaml
context/: CONTEXT.md  implementation-tracker.md  session-log.md
docs/: project-overview.md
docs/architecture/: system-design.md
docs/constraints/: runtime-constraints.md
docs/decisions/: ADR-001-model-selection.md  ADR-template.md
docs/getting-started/: configuration.md  development.md  indexing.md  querying.md  troubleshooting.md
docs/roadmap/: roadmap.md
docs/workflows/: development-workflow.md
sample-knowledge/: ai-agents.md  deep-learning.md  docker-guide.md  git-guide.md  git-workflows.md  machine-learning-intro.md  ml-evaluation.md  python-advanced.md  python-basics.md  rest-api-design.md  sql-guide.md
scripts/: validate_environment.py
src/knowledge_onboarding_agent/: __init__.py  config.py  interfaces.py  models.py
tests/: __init__.py  conftest.py  test_config.py
tests/embeddings/: __init__.py  test_chunk_embedder.py  test_ollama_embedder.py
tests/fixtures/: long_article.md  no_headings.md  simple.md
tests/ingestion/: __init__.py  test_chunker.py  test_parser.py  test_pipeline.py  test_watcher.py
tests/orchestration/: __init__.py  test_cli.py  test_query_engine.py
tests/retrieval/: __init__.py  test_semantic_search.py
(+18 files in other folders)
